Use KIO::StoredGet instead of PodcastFetcher. Podcastfetcher was originally developed to work around a KDELibs bug. This seems to be fixed since at least KDE 3.5.0 but possibly a lot earlier. If problems with weird filenames show up, look at the KDELibs version. If lots of users are affected we might have to use PodcastFetcher for those older KDELibs. Lot's of possible enhancements: resuming downloads, reducing memory consumption (not StoredGet), MIME type checking....

BUG:135147

svn path=/trunk/extragear/multimedia/amarok/; revision=610189