src/statusbar/progressBar.cpp
@@ -90,7 +90,6 @@ ProgressBar&
 ProgressBar::setProgressSignal( QObject *sender, const char *signal )
 {
     setTotalSteps( 100 );
-    debug() << "connecting " << signal << " LOOKATME\n";
     connect( sender, signal, Amarok::StatusBar::instance(), SLOT( setProgress ( const QObject*, int ) ) );
     return *this;
 }
